nodejs-demo/route.yaml
# sealed secrets service 
apiVersion: v1
kind: Service
metadata:
  name: nodejs-demo-ss
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: nodejs-demo-ss
  type: LoadBalancer
---
# sealed secrets route 
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nodejs-demo-ss
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: nodejs-demo-ss
---
# sealed secrets service 
apiVersion: v1
kind: Service
metadata:
  name: nodejs-demo-hashi
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: nodejs-demo-hashi
  type: LoadBalancer
---
# sealed secrets route 
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nodejs-demo-hashi
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: nodejs-demo-hashi
